# MyQtApp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
